[package]
name = "liftlog_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "tracing"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0"
config = "0.13.1"
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.4.1", features = ["serde"] }
chrono = { version = "0.4.30", features = ["serde"] }
argon2 = "0.5.2"
serde_json = "1.0.107"
rand = "0.8.5"
utoipa = { version = "3.5.0", features = ["axum_extras", "debug", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
utoipa-redoc = { version = "0.1.0", features = ["axum"] }
utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
tower = "0.4.13"
axum-test = "12.5.1"
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.0"
axum-macros = "0.3.8"
