[package]
name = "liftlog_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["tracing"] }
tokio = { version = "1.35.1", features = ["full"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
config = "0.13.4"
serde = { version = "1.0.194", features = ["derive", "serde_derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
argon2 = "0.5.2"
serde_json = "1.0.111"
rand = "0.8.5"
utoipa = { version = "4.1.0", features = [
    "axum_extras",
    "debug",
    "chrono",
    "uuid",
] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
tower = "0.4.13"
axum-test = "14.2.2 "
validator = { version = "0.17.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
axum-macros = "0.4.0"
rust_decimal = "1.33.1"
